--- a/lista exercicios intermediaria/exercicios.ipynb
+++ b/lista exercicios intermediaria/exercicios.ipynb
@@ -28,14 +28,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.0 / 5.0 é igual a 1.0\n"
+      "5.0 + 5.0 é igual a 10.0\n"
      ]
     }
    ],
